apps/media/syncthing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: security-local-ip-allowlist@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "File Synchronization"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "si-syncthing"
    gethomepage.dev/name: "Syncthing"
    gethomepage.dev/href: "https://syncthing.valab.top"
spec:
  rules:
    - host: syncthing.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing
                port:
                  number: 8384
